// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`merge-queue auto queue workflow generated by default with merge queue enabled 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: auto-queue
on:
  pull_request_target:
    types:
      - opened
      - reopened
      - ready_for_review
      - edited
jobs:
  enableAutoQueue:
    name: "Set AutoQueue on PR #\${{ github.event.number }}"
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
      contents: write
    if: github.event.action != 'edited'
    steps:
      - uses: peter-evans/enable-pull-request-automerge@v3
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          pull-request-number: \${{ github.event.number }}
          merge-method: squash
"
`;

exports[`merge-queue auto queue workflow generated with autoQueue targetBranches 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: auto-queue
on:
  pull_request_target:
    types:
      - opened
      - reopened
      - ready_for_review
      - edited
    branches:
      - feature-1
      - feature-2
jobs:
  enableAutoQueue:
    name: "Set AutoQueue on PR #\${{ github.event.number }}"
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
      contents: write
    if: contains(fromJSON('["feature-1","feature-2"]'), github.event.pull_request.base.ref) && (github.event.action == 'opened' || (github.event.action == 'edited' && github.event.changes.base))
    steps:
      - uses: peter-evans/enable-pull-request-automerge@v3
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          pull-request-number: \${{ github.event.number }}
          merge-method: squash
"
`;

exports[`merge-queue auto queue workflow generated with custom options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: auto-queue
on:
  pull_request_target:
    types:
      - opened
      - reopened
      - ready_for_review
      - edited
jobs:
  enableAutoQueue:
    name: "Set AutoQueue on PR #\${{ github.event.number }}"
    runs-on: gpu
    permissions:
      pull-requests: write
      contents: write
    if: (contains(github.event.pull_request.labels.*.name, 'abc')) && (github.event.pull_request.user.login == 'foo') && github.event.action != 'edited'
    steps:
      - uses: peter-evans/enable-pull-request-automerge@v3
        with:
          token: \${{ secrets.shh }}
          pull-request-number: \${{ github.event.number }}
          merge-method: merge
"
`;
